# Recommndr

./: .gitignore  LIVE_TESTING_GUIDE.md  LOVABLE_FRONTEND_PROMPT.md  PROJECT_SPEC.md  README.md  demo_complete_lifecycle.py  docker-compose.yml  dvc.yaml  get_user_recommendations.py  pyproject.toml  quick_start.py  requirements.txt  run_tests.py  simulate_live_events.py  test_kafka_recommendations.py  test_live_recommendations.py  test_model_validation.py  test_phase2_pipeline.py  test_phase6_api.py  test_phase6_basic.py
colab_data/: colab_info.json  item_mapping.pkl  matrix_info.json  user_item_matrix.npz  user_mapping.pkl
config/: azure_config.py  azure_credentials_template.env  settings.py
docker/: Dockerfile
docs/: AZURE_SETUP.md
feature_repo/metadata/: day_of_week_metadata.json  hour_of_day_metadata.json  is_weekend_metadata.json  item_category_metadata.json  item_price_metadata.json  item_rating_metadata.json  session_duration_minutes_metadata.json  user_age_metadata.json  user_avg_session_duration_metadata.json  user_income_level_metadata.json  user_preference_category_metadata.json  user_recent_category_counts_metadata.json  user_total_interactions_metadata.json
frontend/: README.md  index.html  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: FeaturedProducts.tsx  Footer.tsx  Hero.tsx  Navigation.tsx  RecommendationShowcase.tsx
frontend/src/pages/: Index.tsx
frontend/src/types/: index.ts
mlruns/0/: meta.yaml
mlruns/345612606113030089/: meta.yaml
mlruns/345612606113030089/87d7263b0afa48bb81905a3c01372f7e/: meta.yaml
mlruns/468439405297649500/: meta.yaml
mlruns/468439405297649500/ae2a8d754fae41ffb9740e4dadfa57ac/: meta.yaml
mlruns/503438965873659176/: meta.yaml
mlruns/503438965873659176/0dcea8d069714f78ac47337fba995bb4/: meta.yaml
mlruns/551941527487335582/: meta.yaml
mlruns/551941527487335582/090b2d7dcfff4d03ba0784ab80467680/: meta.yaml
mlruns/551941527487335582/1e4a43bf59eb475cbe48bf124d030e98/: meta.yaml
mlruns/551941527487335582/60f9e9a758294692b0709a6aee60fd0f/: meta.yaml
mlruns/551941527487335582/a828f03e4bb543cb97f1da14f64adf07/: meta.yaml
mlruns/621939714189266586/: meta.yaml
mlruns/models/recommndr-als-model/: meta.yaml
models/phase3/: faiss_index.faiss  faiss_index.pkl
models/phase4/: lightgbm_ranker.onnx  lightgbm_ranker.pkl
models/phase5/: similarity_index.pkl  similarity_metadata.pkl
monitoring/: prometheus.yml
notebooks/phase3/: README.md  colab_training.md
scripts/: build_docker_advanced.py  build_docker_optimized.py  prepare_colab_data.py  setup_azure.py  test_optimized_training.py  test_phase2.py
src/: __init__.py
src/data_generation/: __init__.py  generators.py  main.py  storage.py
src/features/: __init__.py  feast_integration.py  feature_engineering.py
src/model_management/: __init__.py  feast_metadata.py  main.py  management_api.py  mlflow_registry.py  model_manager.py  model_monitor.py  rollback_system.py
src/processing/: __init__.py  cleaners.py  feature_engineering.py  main.py  matrix_builder.py  transformers.py
src/ranking/: __init__.py  feature_engineering.py  lightgbm_ranker.py  main.py
src/retrieval/: __init__.py  main.py
src/serving/: __init__.py  main.py  recommendation_api.py  simple_api.py
src/similarity/: __init__.py  copurchase_similarity.py  item_similarity.py  main.py  similarity_api.py
src/streaming/: __init__.py  clickstream_simulator.py  flink_processor.py  kafka_consumer.py  kafka_manager.py  kafka_producer.py  main.py
src/utils/: __init__.py  logging.py  schemas.py
src/validation/: __init__.py  main.py  validators.py
tests/unit/: test_data_generation.py
(+238 files in other folders)
